created all sections for website

--- a/index.html
+++ b/index.html
@@ -8,8 +8,46 @@
     <title>Cats</title>
 </head>
 <body>
-    <div class="container">
-        
+    <div class="main-container">
+        <nav class="nav-bar">
+            <div class="nav-logo">
+                <span>Cats</span>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </nav>
+        <div class="hero-section">
+            <div class="hero-container">
+                <div class="hero-content">
+
+                </div>
+                <div class="hero-img">
+
+                </div>
+            </div>
+        </div>
+        <div class="info-section">
+            <div class="info-img"></div>
+            <div class="info-img"></div>
+            <div class="info-img"></div>
+            <div class="info-img"></div>
+        </div>
+        <div class="quote-section">
+
+        </div>
+        <div class="action-section">
+            <div class="action-card">
+
+            </div>
+        </div>
+        <footer class="footer">
+
+        </footer>
     </div>
 </body>
 </html>
