inserted information for all sections

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
                 <span>Cats</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+                <li><a href="#">Link 4</a></li>
             </ul>
         </nav>
         <div class="hero-section">
             <div class="hero-container">
                 <div class="hero-content">
-
+                    <h1 class="hero-header">Welcome</h1>
+                    <p class="hero-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere tenetur mollitia, maxime ipsum, repellat vel officia blanditiis ut provident sapiente, dolores reprehenderit. Ducimus alias fugit, vero id amet illo!</p>
+                    <form action="">
+                        <button type="submit">Sign Up</button>
+                    </form>
                 </div>
                 <div class="hero-img">
 
@@ -32,21 +35,27 @@
             </div>
         </div>
         <div class="info-section">
+            <h2 class="info-header"></h2>
             <div class="info-img"></div>
             <div class="info-img"></div>
             <div class="info-img"></div>
             <div class="info-img"></div>
         </div>
         <div class="quote-section">
+            <div class="quote-main">
 
+            </div>
+            <div class="quote-footer"></div>
         </div>
         <div class="action-section">
             <div class="action-card">
-
+                <form action="">
+                    <button type="submit"></button>
+                </form>
             </div>
         </div>
         <footer class="footer">
-
+            <span class="footer-info">Created by Rudis Argueta :)</span>
         </footer>
     </div>
 </body>
