--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Funny Cats</title>
+    <title>Cool Cats</title>
 </head>
 <body>
     <div class="main-container">
         <nav class="nav-bar">
             <div class="nav-logo">
-                <span><a href="#">CATS</a></span>
+                <span><a href="#">Funny Cats</a></span>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Link 1</a></li>
