changed nav logo to cool cats

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-container">
         <nav class="nav-bar">
             <div class="nav-logo">
-                <span><a href="#">Funny Cats</a></span>
+                <span><a href="#">Cool Cats</a></span>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Link 1</a></li>
