changed nav bar links name

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <span><a href="#">Cool Cats</a></span>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Cats</a></li>
+                <li><a href="#">Sign Up</a></li>
             </ul>
         </nav>
         <div class="hero-section">
