changed hero header

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <div class="hero-section">
             <div class="hero-container">
                 <div class="hero-content">
-                    <h1 class="hero-header">Welcome</h1>
+                    <h1 class="hero-header">Welcome to the cool cats Webpage</h1>
                     <p class="hero-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere tenetur mollitia, maxime ipsum, repellat vel officia blanditiis ut provident sapiente, dolores reprehenderit. Ducimus alias fugit, vero id amet illo!</p>
                     <form action="">
                         <button type="submit">Sign Up</button>
                     </form>
                 </div>
                 <div class="hero-img">
-
+                    <img src="img.png" alt="Image of a grey cat with sunglasses on">
                 </div>
             </div>
         </div>
