removed main container

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cool Cats</title>
 </head>
 <body>
-    <div class="main-container">
+    
         <nav class="nav-bar">
             <div class="nav-logo">
                 <span><a href="#">Cool Cats</a></span>
@@ -23,8 +23,8 @@
         <div class="hero-section">
             <div class="hero-container">
                 <div class="hero-content">
-                    <h1 class="hero-header">Welcome to the cool cats Webpage</h1>
-                    <p class="hero-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere tenetur mollitia, maxime ipsum, repellat vel officia blanditiis ut provident sapiente, dolores reprehenderit. Ducimus alias fugit, vero id amet illo!</p>
+                    <h1 class="hero-header">Welcome to A cat Webpage</h1>
+                    <p class="hero-para">This website is about all things cats. We love cats as much as anyone else. Please feel free to check out the website. We hope you enjoy it!</p>
                     <form action="">
                         <button type="submit">Sign Up</button>
                     </form>
@@ -55,8 +55,8 @@
             </div>
         </div>
         <footer class="footer">
-            <span class="footer-info">Created by Rudis Argueta :)</span>
+            <span class="footer-info">Created by Rudis Argueta</span>
         </footer>
-    </div>
+    
 </body>
 </html>
