chgd title & h1 to cat & added more info to hero

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Cool Cats</title>
+    <title>Cats</title>
 </head>
 <body>
     
         <nav class="nav-bar">
             <div class="nav-logo">
-                <span><a href="#">Cool Cats</a></span>
+                <span><a href="#">Cats</a></span>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
@@ -23,8 +23,8 @@
         <div class="hero-section">
             <div class="hero-container">
                 <div class="hero-content">
-                    <h1 class="hero-header">Welcome to A cat Webpage</h1>
-                    <p class="hero-para">This website is about all things cats. We love cats as much as anyone else. Please feel free to check out the website. We hope you enjoy it!</p>
+                    <h1 class="hero-header">Welcome to the cat Webpage</h1>
+                    <p class="hero-para">This website has information on cats. We know you love cats a bunch and so do we. That is why we created this webpage. This webpage is a testiomini to our love for cats. Please feel free to explore this page and we hope you get something out of it. Feel free to click the sign up button to recieve furture information about this website.</p>
                     <form action="">
                         <button type="submit">Sign Up</button>
                     </form>
@@ -36,16 +36,26 @@
         </div>
         <div class="info-section">
             <h2 class="info-header"></h2>
-            <div class="info-img"></div>
-            <div class="info-img"></div>
-            <div class="info-img"></div>
-            <div class="info-img"></div>
+                <div class="info-img-content">
+                <div class="info-img"></div>
+                <div class="info-img"></div>
+                <div class="info-img"></div>
+                <div class="info-img"></div>
+            </div>  
+            <div class="info-content">
+                <div class="info-para"></div>
+                <div class="info-para"></div>
+                <div class="info-para"></div>
+                <div class="info-para"></div>
+            </div>
         </div>
         <div class="quote-section">
             <div class="quote-main">
-
+                <p>“Owners of dogs will have noticed that, if you provide them with food and water and shelter and affection, they will think you are God. Whereas owners of cats are compelled to realize that, if you provide them with food and water and affection, they draw the conclusion that they are God.”</p>
             </div>
-            <div class="quote-footer"></div>
+            <div class="quote-footer">
+                <span>– Christopher Hitchens</span>
+            </div>
         </div>
         <div class="action-section">
             <div class="action-card">
