added cat img and information

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="info-section">
             <h2 class="info-header"></h2>
                 <div class="info-img-content">
-                <div class="info-img"></div>
+                <div class="info-img"> <img src="hero-img.jpg" alt="cool cat" srcset=""></div>
                 <div class="info-img"></div>
                 <div class="info-img"></div>
                 <div class="info-img"></div>
             </div>  
             <div class="info-content">
-                <div class="info-para"></div>
+                <div class="info-para"> <p>This cat breed is known as a scootish fold. People tend to see them all over social media. Look how cool he looks!. He's a very daper cat.</p></div>
                 <div class="info-para"></div>
                 <div class="info-para"></div>
                 <div class="info-para"></div>
