added header to info-section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="info-section">
-            <h2 class="info-header"></h2>
+            <h2 class="info-header">Cat Images and Info</h2>
                 <div class="info-img-content">
                 <div class="info-img"> <img src="hero-img.jpg" alt="cool cat" srcset=""></div>
                 <div class="info-img"></div>
