changed class name hero -container to container

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="hero-section">
-            <div class="hero-container">
+            <div class="container">
                 <div class="hero-content">
                     <h1 class="hero-header">Welcome to the cat Webpage</h1>
                     <p class="hero-para">This website has information on cats. We know you love cats a bunch and so do we. That is why we created this webpage. This webpage is a testiomini to our love for cats. Please feel free to explore this page and we hope you get something out of it. Feel free to click the sign up button to recieve furture information about this website.</p>
