--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         <div class="info-section">
             <h2 class="info-header">Cat Images and Info</h2>
                 <div class="info-img-content">
-                <div class="info-img"> <img src="hero-img.jpg" alt="cool cat" srcset=""></div>
+                <div class="info-img">
+                    <img src="hero-img.jpg" alt="A Scootish Fold Cat with sun glasses on">
+                </div>
+                
                 <div class="info-img"></div>
                 <div class="info-img"></div>
                 <div class="info-img"></div>
