changed height to auto for imgs

--- a/index.html
+++ b/index.html
@@ -41,13 +41,21 @@
                     <img src="hero-img.jpg" alt="A Scootish Fold Cat with sun glasses on">
                 </div>
                 
-                <div class="info-img"></div>
-                <div class="info-img"></div>
+                <div class="info-img">
+                    <img src="main-coon.jpg" alt="A Main Coon looking up">
+                </div>
+                <div class="info-img">
+                    <img src="siamese-cat.jpg" alt="A Siamese-cat looking behind himself/herself">
+                </div>
                 <div class="info-img"></div>
             </div>  
             <div class="info-content">
-                <div class="info-para"> <p>This cat breed is known as a scootish fold. People tend to see them all over social media. Look how cool he looks!. He's a very daper cat.</p></div>
-                <div class="info-para"></div>
+                <div class="info-para"> 
+                    <p>This cat breed is known as a scootish fold. People tend to see them all over social media. Look how cool he looks!. He's a very daper cat.</p>
+                </div>
+                <div class="info-para"> 
+                    <p>This cat breed is kown as a Main Coon. They can grow up to be some of the biggest cats you'll ever see. They're cute and majestic looking!</p>
+                </div>
                 <div class="info-para"></div>
                 <div class="info-para"></div>
             </div>
