--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                 <div class="info-img">
                     <img src="siamese-cat.jpg" alt="A Siamese-cat looking behind himself/herself">
                 </div>
-                <div class="info-img"></div>
+                <div class="info-img">
+                    <img src="sleeping-kitten.jpg" alt="A kitten asleep">
+                </div>
             </div>  
             <div class="info-content">
                 <div class="info-para"> 
@@ -56,8 +58,12 @@
                 <div class="info-para"> 
                     <p>This cat breed is kown as a Main Coon. They can grow up to be some of the biggest cats you'll ever see. They're cute and majestic looking!</p>
                 </div>
-                <div class="info-para"></div>
-                <div class="info-para"></div>
+                <div class="info-para">
+                    <p>Look at this beautiful cat also known as a siamese cat. This cat breed is known to be a very loving cat. These cats tend to have the same color in their fur or very close to it.</p>
+                </div>
+                <div class="info-para">
+                    <p>You can never go wrong with a sleeping kitten. So we just decided to throw it up here!</p>
+                </div>
             </div>
         </div>
         <div class="quote-section">
@@ -70,6 +76,7 @@
         </div>
         <div class="action-section">
             <div class="action-card">
+                .
                 <form action="">
                     <button type="submit"></button>
                 </form>
