added call to action

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
         </div>
         <div class="action-section">
             <div class="action-card">
-                .
+                <div class="card-info">
+                    <h2>It's Time!</h2>
+                    <p>Please feel free to hit the sign up button to recieve any future updates!</p>
+                </div>
                 <form action="">
-                    <button type="submit"></button>
+                    <button type="submit">Sign Up</button>
                 </form>
             </div>
         </div>
