linked imgs to proper places

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </form>
                 </div>
                 <div class="hero-img">
-                    <img src="img.png" alt="Image of a grey cat with sunglasses on">
+                    <img src="./img/hero-img.png" alt="Image of a grey cat with sunglasses on">
                 </div>
             </div>
         </div>
@@ -38,17 +38,17 @@
             <h2 class="info-header">Cat Images and Info</h2>
                 <div class="info-img-content">
                 <div class="info-img">
-                    <img src="hero-img.jpg" alt="A Scootish Fold Cat with sun glasses on">
+                    <img src="./img/scootish-fold.jpg" alt="A Scootish Fold Cat with sun glasses on">
                 </div>
                 
                 <div class="info-img">
-                    <img src="main-coon.jpg" alt="A Main Coon looking up">
+                    <img src="./img/main-coon.jpg" alt="A Main Coon looking up">
                 </div>
                 <div class="info-img">
-                    <img src="siamese-cat.jpg" alt="A Siamese-cat looking behind himself/herself">
+                    <img src="./img/siamese-cat.jpg" alt="A Siamese-cat looking behind himself/herself">
                 </div>
                 <div class="info-img">
-                    <img src="sleeping-kitten.jpg" alt="A kitten asleep">
+                    <img src="./img/sleeping-kitten.jpg" alt="A kitten asleep">
                 </div>
             </div>  
             <div class="info-content">
