removed text from cat info

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>This cat breed is kown as a Main Coon. They can grow up to be some of the biggest cats you'll ever see. They're cute and majestic looking!</p>
                 </div>
                 <div class="info-para">
-                    <p>Look at this beautiful cat also known as a siamese cat. This cat breed is known to be a very loving cat. These cats tend to have the same color in their fur or very close to it.</p>
+                    <p>Look at this beautiful cat also known as a siamese cat. This cat breed is known to be a very loving cat.</p>
                 </div>
                 <div class="info-para">
                     <p>You can never go wrong with a sleeping kitten. So we just decided to throw it up here!</p>
